<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_nanosecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_nanosecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nanosecond"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_microsecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_microsecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/microsecond"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_millisecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_millisecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/millisecond"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/second"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_minute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_minute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/minute"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hour"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/day"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/week"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/month"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/year"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_decade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_decade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/decade"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_century"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_century"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/century"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>