<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_square_kilometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_square_kilometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/square_kilometre"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_square_metre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_square_metre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/square_metre"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_square_mile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_square_mile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/square_mile"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_square_yard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_square_yard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/square_yard"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_square_foot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_square_foot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/square_foot"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_square_inch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_square_inch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/square_inch"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_hectare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_hectare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hectare"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_acre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_acre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/acre"
                android:inputType="numberSigned|numberDecimal" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>